istio/04_security_and_policy/authorization_policies/examples/deny_all_traffic.yaml

# This denies all traffic unless explicitly allowed by another policy.

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: default
spec:
  action: DENY

---
