istio/04_security_and_policy/authorization_policies/examples/deny_workloads_from_ns_to_ns.yaml

# DENY WORKLOADS IN NAMESPACE BAR TO POST
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authdenypolicy
  namespace: bookinfo 
spec:
  action: DENY
  rules:
    - from:
        - source:
          namespace: ["bar"]
      to:
        - operation:
          methods: ["POST"]
          
---
